# OMP

./: .gitignore  LICENSE  README.md  pyproject.toml
omp/: __init__.py  exceptions.py  inspect.py  merge.py  protos.py
omp/cli/: __init__.py  main.py
omp/core/: __init__.py  checksum.py  compressor.py  framer.py  reader.py  writer.py
omp/inject/: __init__.py  prompt.py  templates.py
omp/inject/adapters/: __init__.py  anthropic.py  base.py  gemini.py  generic.py  openai.py
omp/proto/: __init__.py  adapter.proto  adapter_pb2.py  common.proto  common_pb2.py  embedding.proto  embedding_pb2.py  encryption.proto  encryption_pb2.py  graph.proto  graph_pb2.py  identity.proto  identity_pb2.py  memory.proto  memory_pb2.py  orb.proto  orb_pb2.py  passport.proto  passport_pb2.py  query.proto  query_pb2.py  registry.proto  registry_pb2.py  response.proto  response_pb2.py
omp/query/: __init__.py  engine.py
omp/schema/: __init__.py  builder.py  convert.py  validator.py  version.py
tests/: test_api.py  test_cli.py  test_framer.py
